crates/chatters-lib/src/tui/snapshots/chatters_lib__tui__list__tests__horizontal_list-2.snap
---
source: crates/chatters-lib/src/tui/list.rs
expression: terminal.backend()
---
"0 1 2 3 4 5 6 7 8 9 "
"                    "
