crates/chatters-lib/src/tui/snapshots/chatters_lib__tui__list__tests__horizontal_list-3.snap
---
source: crates/chatters-lib/src/tui/list.rs
expression: terminal.backend()
---
"13 14 15 16 17 18 19"
"                    "
