crates/chatters-lib/src/tui/snapshots/chatters_lib__tui__list__tests__vertical_list.snap
---
source: crates/chatters-lib/src/tui/list.rs
expression: terminal.backend()
---
"single line         "
"multi               "
"line                "
"string              "
"a                   "
"b                   "
"c                   "
"1                   "
"2                   "
"3                   "
